tests/ui/g-route-nested-policy-not-promoted.stderr
error[E0080]: evaluation panicked: route scope recorded a controller policy annotation on only one arm
 --> src/global/program.rs
  |
  |         validate_all_roles(&summary);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::global::program::ValidatedProgram::<hibana::global::steps::RouteSteps<hibana::global::steps::SeqSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<48>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopContinueKind>, hibana::substrate::cap::advanced::LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::RouteSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<48>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopContinueKind>, hibana::substrate::cap::advanced::LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<49>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopBreakKind>, hibana::substrate::cap::advanced::LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<hibana::g::Role<0>, hibana::g::Role<0>, hibana::global::Message<hibana::global::LabelMarker<49>, hibana::substrate::cap::GenericCapToken<hibana::substrate::cap::advanced::LoopBreakKind>, hibana::substrate::cap::advanced::LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>::SUMMARY` failed inside this call
  |
note: inside `hibana::global::compiled::lowering::seal::validate_all_roles`
 --> src/global/compiled/lowering/seal.rs
  |
  |     ProjectionSeal::<0>::validate_compiled_layout(summary.view());
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_compiled_layout`
 --> src/global/compiled/lowering/seal.rs
  |
  |         Self::validate_route_projection_guarantees(view);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_projection_guarantees`
 --> src/global/compiled/lowering/seal.rs
  |
  | /                 Self::validate_route_scope(
  | |                     view,
  | |                     scope_markers,
  | |                     marker.scope_id,
  | |                     marker.controller_role,
  | |                     marker.linger,
  | |                 );
  | |_________________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_scope`
 --> src/global/compiled/lowering/seal.rs
  |
  | /         Self::validate_route_policy_consistency(
  | |             view,
  | |             arm0_enter_marker_idx,
  | |             arm0_end,
  | |             arm1_enter_marker_idx,
  | |             arm1_end,
  | |         );
  | |_________^
note: inside `hibana::global::compiled::lowering::seal::ProjectionSeal::<0>::validate_route_policy_consistency`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global/compiled/lowering/seal.rs
  |
  |                 panic!("route scope recorded a controller policy annotation on only one arm");
  |                 ----------------------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |     &ValidatedProgram::<Steps>::SUMMARY
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |     &ValidatedProgram::<Steps>::SUMMARY
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn hibana::global::program::validated_program_summary::<hibana::global::steps::RouteSteps<hibana::global::steps::SeqSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<48>, GenericCapToken<LoopContinueKind>, LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::RouteSteps<hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<48>, GenericCapToken<LoopContinueKind>, LoopContinueKind>>, hibana::global::steps::StepNil>, 10>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<49>, GenericCapToken<LoopBreakKind>, LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>, hibana::global::steps::PolicySteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<49>, GenericCapToken<LoopBreakKind>, LoopBreakKind>>, hibana::global::steps::StepNil>, 10>>>`
 --> src/global/program.rs
  |
  |         validated_program_summary::<Steps>()
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |     const STAMP: ProgramStamp = Self::SUMMARY.stamp();
  |                                 ^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global/program.rs
  |
  |     ValidatedProgram::<Steps>::STAMP
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
